# auction

./: .env.example  .gitignore  README.md  auction-ocr-combined-plan-fixed.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  auth.py  deps.py  documents.py  exports.py  records.py  review.py  webhooks.py
backend/app/db/: __init__.py  session.py  session_sync.py
backend/app/models/: __init__.py  document.py  equipment.py  extraction_template.py  override.py  record.py  user.py  whatsapp.py
backend/app/schemas/: __init__.py  auth.py  common.py  document.py  record.py  review.py
backend/app/services/: __init__.py  export.py  files.py  normalization.py  queue.py  search.py  security.py  storage.py
backend/migrations/: env.py  script.py.mako
backend/migrations/versions/: 0001_initial.py
backend/tests/: test_ground_truth.py
backend/worker/: celery_app.py
backend/worker/ocr/: __init__.py  date_parsing.py  header_extraction.py  image_utils.py  ocr_engine.py  parsing.py  preprocessing.py  roi.py  sheet_extraction.py  vl_engine.py
backend/worker/tasks/: __init__.py  extract.py  ocr.py  preprocess.py  validate.py  watchdog.py
example_images/: ground_truth.csv
frontend/: Dockerfile
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/exports/: page.tsx
frontend/src/app/records/: page.tsx
frontend/src/app/records/[id]/: page.tsx
frontend/src/app/review/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: AppShell.tsx  SideNav.tsx  Topbar.tsx  UploadDropzone.tsx
